# nutils

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt  test.py
mutualInfo/: D_mine.py  estimateMINE.py  mututalInfo.py
nnutils/: __init__.py
nnutils/timing/: timer.py
nutils/: __init__.py  benchmark.py  nutil.py
nutils/timing/: __init__.py  timer.py
