[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nutils"
version = "0.1.0"
authors = [
  { name = "Purvish Jajal", email = "pjajal@purdue.edu" },
  { name = "Nick John Eliopoulos", email = "neliopou@purdue.edu" },
]
description = "Minimialist package for various PyTorch utilities."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = ["torch", "torchtnt"]


[project.urls]
"Homepage" = "https://github.com/pjjajal/nutils"
